--- a/public/scss/_navbar.scss
+++ b/public/scss/_navbar.scss
@@ -86,7 +86,11 @@
 }
 
 .sidebar {
-  display: none;
+  // display: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 10;
   width: $sidebar-collapsed-width !important;
   // Transparent background
   //background-color: rgba(0, 0, 0, 0.4);
@@ -113,6 +117,8 @@
 
 @media (min-width: 768px) {
   .sidebar {
+    position: relative;
+    z-index: 0;
     display: flex;
     width: $sidebar-base-width !important;
 
@@ -174,6 +180,56 @@
     }
   }
 }
+
+// .channels-list-wrapper {
+//   padding-top: $navbar-base-height;
+// }
+
+.channels-modal {
+  display: block;
+}
+
+@media (min-width: 768px) {
+  .channels-modal {
+    display: none;
+  }
+}
+
+.channels-list {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .channels-list {
+    display: block;
+  }
+}
+
+.mobile-channels-list {
+  border-radius: $border-radius;
+  background-color: $gray-700;
+  
+  .channels-item {
+    .channels-link {
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 100%;
+      text-decoration: none;
+      padding: 14px 9px;
+      color: fade-out($white, 0.2);
+      &:active,
+      &:focus,
+      &:hover {
+        color: fade-out($white, 0.2);
+        // background-color: $gray-600;
+      }
+    }
+  }
+}
+
+// .channels-list.show {
+//   display: block;
+// }
 
 // Fixed Nav Option
 // Add .fixed-top class to top .navbar-nav and to .sidebar - add .fixed-nav to body
